api-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: depl-appgo
spec:
  selector:
    matchLabels:
      app: api-go
  replicas: 3
  template:
    metadata:
      labels:
        app: api-go
    spec:
      containers:
        - name: api-go
          image: elwicho69/go-app:apirest
          ports:
            - containerPort: 8080
            
#para el servicio de exponer la api
---
apiVersion: v1
kind: Service
metadata:
  name: apigo-service
spec:
  selector:
    app: api-go
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
